# RayTracingRenderer

./: .gitignore  CMakeLists.txt  README.md  normal.ppm  simple_rt.ppm  test.ppm
.cache/clangd/index/: _fixes.hpp.D8A7CC62A63ADD1C.idx  _vectorize.hpp.C1CBEB2EC3EF9260.idx  common.hpp.35AA4B44D6A41460.idx  compute_common.hpp.FF13B60315FCA44B.idx  compute_vector_decl.hpp.FAE08C5DB38F5BAB.idx  compute_vector_relational.hpp.10CB593F67EC8ECA.idx  constants.hpp.07DB242F193D5EFD.idx  constants.inl.7053C6AF3C8AF66D.idx  dual_quaternion.hpp.D13ED2111AD619D4.idx  (+179 more)
source/: CMakeLists.txt
source/include/: camera.hpp  film.hpp  frame.hpp  model.hpp  ray.hpp  scene.hpp  shape.hpp  sphere.hpp  spin_lock.hpp  thread_pool.hpp
source/include/accelerate/: aabb.hpp  bvh.hpp
source/include/camera/: film.hpp  ray.hpp
source/include/renderer/: base_renderer.hpp  normal_renderer.hpp
source/include/shape/: material.hpp  model.hpp  plane.hpp  shape.hpp  sphere.hpp  triangle.hpp
source/include/thread/: spin_lock.hpp  thread_pool.hpp
source/include/util/: progress.hpp  rgb.hpp  rng.hpp
source/src/: camera.cpp  film.cpp  frame.cpp  main.cpp  model.cpp  plane.cpp  ray.cpp  scene.cpp  sphere.cpp  thread_pool.cpp  triangle.cpp
source/src/accelerate/: aabb.cpp  bvh.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/renderer/: base_renderer.cpp  normal_renderer.cpp  simple_rt_renderer.cpp
source/src/shape/: model.cpp  plane.cpp  scene.cpp  sphere.cpp  triangle.cpp
source/src/thread/: thread_pool.cpp
source/src/util/: frame.cpp  progress.cpp
